--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1509,7 +1509,7 @@ h6 .badge {
   left: 0;
   width: 100%;
   height: 115px;
-  background-image: linear-gradient(90deg, rgb(79, 71, 234) 0%, rgb(49, 49, 210) 0%, #ea4151 100%);
+  background-color: #ea4151;
   z-index: -1; }
 
 .navbar {
@@ -2773,10 +2773,10 @@ body:not(.sidebar-mini) .sidebar-style-2 .sidebar-menu li.active ul.dropdown-men
     to {
       opacity: .6; } } }
 /* 4.5 Animation */
-.pulsate {
+/* .pulsate {
   animation: pulsate 1s ease-out;
   animation-iteration-count: infinite;
-  opacity: 1; }
+  opacity: 1; } */
 
 /* @-webkit-keyframes pulsate {
   0% {
